tests/suite/snapshots/suite__case_lhl4.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at \r\n!invalid{}tag scalar\r\n"
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

