tests/suite/snapshots/suite__case_lp6e.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: SequenceStart
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Scalar
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: CollectionEntry
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Scalar
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Separator
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: CollectionEntry
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Separator
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: Scalar
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: Separator
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 12
    line: 0
    column: 12
- token: SequenceEnd
  start:
    index: 12
    line: 0
    column: 12
  end:
    index: 13
    line: 0
    column: 13
- token: Break
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 15
    line: 1
    column: 0
- token: Indent
  start:
    index: 15
    line: 1
    column: 0
  end:
    index: 15
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 15
    line: 1
    column: 0
  end:
    index: 16
    line: 1
    column: 1
- token: Separator
  start:
    index: 16
    line: 1
    column: 1
  end:
    index: 17
    line: 1
    column: 2
- token: MappingStart
  start:
    index: 17
    line: 1
    column: 2
  end:
    index: 18
    line: 1
    column: 3
- token: Separator
  start:
    index: 18
    line: 1
    column: 3
  end:
    index: 19
    line: 1
    column: 4
- token: DoubleQuote
  start:
    index: 19
    line: 1
    column: 4
  end:
    index: 20
    line: 1
    column: 5
- token: DoubleQuoted
  start:
    index: 20
    line: 1
    column: 5
  end:
    index: 21
    line: 1
    column: 6
- token: DoubleQuote
  start:
    index: 21
    line: 1
    column: 6
  end:
    index: 22
    line: 1
    column: 7
- token: Separator
  start:
    index: 22
    line: 1
    column: 7
  end:
    index: 24
    line: 1
    column: 9
- token: MappingValue
  start:
    index: 24
    line: 1
    column: 9
  end:
    index: 25
    line: 1
    column: 10
- token: Separator
  start:
    index: 25
    line: 1
    column: 10
  end:
    index: 26
    line: 1
    column: 11
- token: Scalar
  start:
    index: 26
    line: 1
    column: 11
  end:
    index: 27
    line: 1
    column: 12
- token: Break
  start:
    index: 27
    line: 1
    column: 12
  end:
    index: 29
    line: 2
    column: 0
- token: Indent
  start:
    index: 29
    line: 2
    column: 0
  end:
    index: 30
    line: 2
    column: 1
- token: Separator
  start:
    index: 30
    line: 2
    column: 1
  end:
    index: 32
    line: 2
    column: 3
- token: CollectionEntry
  start:
    index: 32
    line: 2
    column: 3
  end:
    index: 33
    line: 2
    column: 4
- token: Separator
  start:
    index: 33
    line: 2
    column: 4
  end:
    index: 34
    line: 2
    column: 5
- token: Scalar
  start:
    index: 34
    line: 2
    column: 5
  end:
    index: 35
    line: 2
    column: 6
- token: Separator
  start:
    index: 35
    line: 2
    column: 6
  end:
    index: 36
    line: 2
    column: 7
- token: MappingValue
  start:
    index: 36
    line: 2
    column: 7
  end:
    index: 37
    line: 2
    column: 8
- token: Separator
  start:
    index: 37
    line: 2
    column: 8
  end:
    index: 38
    line: 2
    column: 9
- token: SingleQuote
  start:
    index: 38
    line: 2
    column: 9
  end:
    index: 39
    line: 2
    column: 10
- token: SingleQuoted
  start:
    index: 39
    line: 2
    column: 10
  end:
    index: 40
    line: 2
    column: 11
- token: SingleQuote
  start:
    index: 40
    line: 2
    column: 11
  end:
    index: 41
    line: 2
    column: 12
- token: Separator
  start:
    index: 41
    line: 2
    column: 12
  end:
    index: 42
    line: 2
    column: 13
- token: CollectionEntry
  start:
    index: 42
    line: 2
    column: 13
  end:
    index: 43
    line: 2
    column: 14
- token: Break
  start:
    index: 43
    line: 2
    column: 14
  end:
    index: 45
    line: 3
    column: 0
- token: Indent
  start:
    index: 45
    line: 3
    column: 0
  end:
    index: 46
    line: 3
    column: 1
- token: Separator
  start:
    index: 46
    line: 3
    column: 1
  end:
    index: 48
    line: 3
    column: 3
- token: Scalar
  start:
    index: 48
    line: 3
    column: 3
  end:
    index: 49
    line: 3
    column: 4
- token: Separator
  start:
    index: 49
    line: 3
    column: 4
  end:
    index: 52
    line: 3
    column: 7
- token: MappingValue
  start:
    index: 52
    line: 3
    column: 7
  end:
    index: 53
    line: 3
    column: 8
- token: Separator
  start:
    index: 53
    line: 3
    column: 8
  end:
    index: 54
    line: 3
    column: 9
- token: DoubleQuote
  start:
    index: 54
    line: 3
    column: 9
  end:
    index: 55
    line: 3
    column: 10
- token: DoubleQuoted
  start:
    index: 55
    line: 3
    column: 10
  end:
    index: 56
    line: 3
    column: 11
- token: DoubleQuote
  start:
    index: 56
    line: 3
    column: 11
  end:
    index: 57
    line: 3
    column: 12
- token: Break
  start:
    index: 57
    line: 3
    column: 12
  end:
    index: 59
    line: 4
    column: 0
- token: Indent
  start:
    index: 59
    line: 4
    column: 0
  end:
    index: 60
    line: 4
    column: 1
- token: Separator
  start:
    index: 60
    line: 4
    column: 1
  end:
    index: 61
    line: 4
    column: 2
- token: MappingEnd
  start:
    index: 61
    line: 4
    column: 2
  end:
    index: 62
    line: 4
    column: 3
- token: Break
  start:
    index: 62
    line: 4
    column: 3
  end:
    index: 64
    line: 5
    column: 0
- token: Indent
  start:
    index: 64
    line: 5
    column: 0
  end:
    index: 64
    line: 5
    column: 0
- token: SequenceEntry
  start:
    index: 64
    line: 5
    column: 0
  end:
    index: 65
    line: 5
    column: 1
- token: Separator
  start:
    index: 65
    line: 5
    column: 1
  end:
    index: 66
    line: 5
    column: 2
- token: SequenceStart
  start:
    index: 66
    line: 5
    column: 2
  end:
    index: 67
    line: 5
    column: 3
- token: Separator
  start:
    index: 67
    line: 5
    column: 3
  end:
    index: 73
    line: 5
    column: 9
- token: SequenceEnd
  start:
    index: 73
    line: 5
    column: 9
  end:
    index: 74
    line: 5
    column: 10
- token: Break
  start:
    index: 74
    line: 5
    column: 10
  end:
    index: 76
    line: 6
    column: 0

