tests/suite/snapshots/suite__case_lx3p.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Scalar
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 5
- token: SequenceEnd
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: MappingValue
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: Separator
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Scalar
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 13
- token: Break
  start:
    line: 0
    column: 13
  end:
    line: 1
    column: 0

