tests/suite/snapshots/suite__case_m5dy.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingKey
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Indent
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: SequenceEntry
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Scalar
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 18
    line: 0
    column: 18
- token: Break
  start:
    index: 18
    line: 0
    column: 18
  end:
    index: 20
    line: 1
    column: 0
- token: Indent
  start:
    index: 20
    line: 1
    column: 0
  end:
    index: 22
    line: 1
    column: 2
- token: SequenceEntry
  start:
    index: 22
    line: 1
    column: 2
  end:
    index: 23
    line: 1
    column: 3
- token: Separator
  start:
    index: 23
    line: 1
    column: 3
  end:
    index: 24
    line: 1
    column: 4
- token: Scalar
  start:
    index: 24
    line: 1
    column: 4
  end:
    index: 36
    line: 1
    column: 16
- token: Break
  start:
    index: 36
    line: 1
    column: 16
  end:
    index: 38
    line: 2
    column: 0
- token: Indent
  start:
    index: 38
    line: 2
    column: 0
  end:
    index: 38
    line: 2
    column: 0
- token: MappingValue
  start:
    index: 38
    line: 2
    column: 0
  end:
    index: 39
    line: 2
    column: 1
- token: Break
  start:
    index: 39
    line: 2
    column: 1
  end:
    index: 41
    line: 3
    column: 0
- token: Indent
  start:
    index: 41
    line: 3
    column: 0
  end:
    index: 43
    line: 3
    column: 2
- token: SequenceEntry
  start:
    index: 43
    line: 3
    column: 2
  end:
    index: 44
    line: 3
    column: 3
- token: Separator
  start:
    index: 44
    line: 3
    column: 3
  end:
    index: 45
    line: 3
    column: 4
- token: Scalar
  start:
    index: 45
    line: 3
    column: 4
  end:
    index: 55
    line: 3
    column: 14
- token: Break
  start:
    index: 55
    line: 3
    column: 14
  end:
    index: 59
    line: 5
    column: 0
- token: Indent
  start:
    index: 59
    line: 5
    column: 0
  end:
    index: 59
    line: 5
    column: 0
- token: MappingKey
  start:
    index: 59
    line: 5
    column: 0
  end:
    index: 60
    line: 5
    column: 1
- token: Separator
  start:
    index: 60
    line: 5
    column: 1
  end:
    index: 61
    line: 5
    column: 2
- token: SequenceStart
  start:
    index: 61
    line: 5
    column: 2
  end:
    index: 62
    line: 5
    column: 3
- token: Separator
  start:
    index: 62
    line: 5
    column: 3
  end:
    index: 63
    line: 5
    column: 4
- token: Scalar
  start:
    index: 63
    line: 5
    column: 4
  end:
    index: 79
    line: 5
    column: 20
- token: CollectionEntry
  start:
    index: 79
    line: 5
    column: 20
  end:
    index: 80
    line: 5
    column: 21
- token: Break
  start:
    index: 80
    line: 5
    column: 21
  end:
    index: 82
    line: 6
    column: 0
- token: Indent
  start:
    index: 82
    line: 6
    column: 0
  end:
    index: 83
    line: 6
    column: 1
- token: Separator
  start:
    index: 83
    line: 6
    column: 1
  end:
    index: 86
    line: 6
    column: 4
- token: Scalar
  start:
    index: 86
    line: 6
    column: 4
  end:
    index: 100
    line: 6
    column: 18
- token: Separator
  start:
    index: 100
    line: 6
    column: 18
  end:
    index: 101
    line: 6
    column: 19
- token: SequenceEnd
  start:
    index: 101
    line: 6
    column: 19
  end:
    index: 102
    line: 6
    column: 20
- token: Break
  start:
    index: 102
    line: 6
    column: 20
  end:
    index: 104
    line: 7
    column: 0
- token: Indent
  start:
    index: 104
    line: 7
    column: 0
  end:
    index: 104
    line: 7
    column: 0
- token: MappingValue
  start:
    index: 104
    line: 7
    column: 0
  end:
    index: 105
    line: 7
    column: 1
- token: Separator
  start:
    index: 105
    line: 7
    column: 1
  end:
    index: 106
    line: 7
    column: 2
- token: SequenceStart
  start:
    index: 106
    line: 7
    column: 2
  end:
    index: 107
    line: 7
    column: 3
- token: Separator
  start:
    index: 107
    line: 7
    column: 3
  end:
    index: 108
    line: 7
    column: 4
- token: Scalar
  start:
    index: 108
    line: 7
    column: 4
  end:
    index: 118
    line: 7
    column: 14
- token: CollectionEntry
  start:
    index: 118
    line: 7
    column: 14
  end:
    index: 119
    line: 7
    column: 15
- token: Separator
  start:
    index: 119
    line: 7
    column: 15
  end:
    index: 120
    line: 7
    column: 16
- token: Scalar
  start:
    index: 120
    line: 7
    column: 16
  end:
    index: 130
    line: 7
    column: 26
- token: CollectionEntry
  start:
    index: 130
    line: 7
    column: 26
  end:
    index: 131
    line: 7
    column: 27
- token: Break
  start:
    index: 131
    line: 7
    column: 27
  end:
    index: 133
    line: 8
    column: 0
- token: Indent
  start:
    index: 133
    line: 8
    column: 0
  end:
    index: 134
    line: 8
    column: 1
- token: Separator
  start:
    index: 134
    line: 8
    column: 1
  end:
    index: 137
    line: 8
    column: 4
- token: Scalar
  start:
    index: 137
    line: 8
    column: 4
  end:
    index: 147
    line: 8
    column: 14
- token: Separator
  start:
    index: 147
    line: 8
    column: 14
  end:
    index: 148
    line: 8
    column: 15
- token: SequenceEnd
  start:
    index: 148
    line: 8
    column: 15
  end:
    index: 149
    line: 8
    column: 16
- token: Break
  start:
    index: 149
    line: 8
    column: 16
  end:
    index: 151
    line: 9
    column: 0

