tests/suite/snapshots/suite__case_m7a3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 4
- token: ScalarSpace
  start:
    line: 0
    column: 4
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 8
- token: Break
  start:
    line: 1
    column: 8
  end:
    line: 2
    column: 0
- token: DocumentEnd
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 3
- token: Break
  start:
    line: 2
    column: 3
  end:
    line: 3
    column: 0
- token: Comment
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: CommentText
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 13
- token: Break
  start:
    line: 3
    column: 13
  end:
    line: 4
    column: 0
- token: DocumentEnd
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 3
- token: Break
  start:
    line: 4
    column: 3
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Literal
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Break
  start:
    line: 5
    column: 1
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: Scalar
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 35
- token: ScalarBreak
  start:
    line: 6
    column: 35
  end:
    line: 7
    column: 0

